--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="class_name">Class Name</string>
     <string name="teacher_name">Teacher Name</string>
     <string name="room_no">Room no</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="enter_your_email_address">Enter your email address:</string>
 </resources>
